module(
    name = "leetcode_java",
    version = "0.1.0",
)


bazel_dep(
    name = "rules_jvm_external",
    version = "4.5",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# https://github.com/junit-team/junit5-samples/tree/main/junit5-jupiter-starter-bazel/WORKSPACE
JUNIT_JUPITER_VERSION = "5.9.2"
JUNIT_PLATFORM_VERSION = "1.9.2"

maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
    ],
    # repositories = [
    #     "https://repo.maven.apache.org/maven2",
    # ],
    lock_file = "//:maven_install.json",
    fail_if_repin_required = True,
)

use_repo(
    maven,
    "maven",
    "unpinned_maven",
)
