module(name = "leetcode_java", version = "0.1.0")

# https://registry.bazel.build/modules/rules_jvm_external
# https://github.com/bazelbuild/rules_jvm_external/blob/master/docs/bzlmod.md
bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# https://github.com/junit-team/junit5-samples/tree/main/junit5-jupiter-starter-bazel/WORKSPACE
JUNIT_JUPITER_VERSION = "5.10.1"
JUNIT_PLATFORM_VERSION = "1.10.1"
JACKSON_VERSION = "2.16.1"

maven.install(
    name = "mvn",
    artifacts = [
        "org.junit.jupiter:junit-jupiter:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:%s" % JACKSON_VERSION,
        "org.openjfx:javafx-base:21-ea+31",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
    lock_file = "//:maven_install.json",
    fail_if_repin_required = True,
)

use_repo(maven, "mvn", "unpinned_mvn")

# https://registry.bazel.build/modules/contrib_rules_jvm
# https://github.com/bazel-contrib/rules_jvm
bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
